--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Plant Shop!</h1>
-        <hr>
-        <div class="container">
-            {% block content %}{% endblock %}
+        <div class="main-container">
+            <h1 class="text-center">
+                <i class="fas fa-wallet wallet-icon"></i>
+                Cartera Digital
+            </h1>
+            <hr>
+            <div class="container">
+                {% block content %}{% endblock %}
+            </div>
         </div>
     </div>
 </body>
 </html>
-
