perf: Elimina el modo debug

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
     <div class="container mt-4">
         <div class="main-container">
             <h1 class="text-center">
                 <i class="fas fa-wallet wallet-icon"></i>
-                Cartera Digital
+                Cartera Digital v3.0.3
             </h1>
             <hr>
             <div class="container">
@@ -22,4 +24,5 @@
         </div>
     </div>
 </body>
+
 </html>
